multiple changes; navbar animation; added calender project; added printsvilla intern and code optimization

--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
 						<span class='icon-bar'></span>
 					</button>
 					<ul>
-						<li class='active'>
-							<a class='navbar-brand' href="index.html">
-								Anirudh Goel
-							</a>
-						</li>
+						<a class='navbar-brand active' href="index.html">
+							Anirudh Goel
+						</a>
 					</ul>
 				</div>
 				<div class='collapse navbar-collapse' id='myNavbar'>
@@ -191,6 +189,28 @@
 					<div class='proj-text'>
 						<div class='row'>
 							<div class='col-sm-4 wow fadeInLeft' align="center">
+								<img src="img/projects/Cale.jpg" alt='Productive Calender' class='thumbnail proj-img'>
+								<div class='proj-panel'>
+									<div class='panel'>
+										<div class='panel-heading'>
+											<div class='proj-panel-heading'>
+												<strong>
+													Productive Calender
+												</strong>
+											</div>
+										</div>
+										<div class='panel-body'>
+											A Django based application that functions as a complete planner with features like event organizing, Google Calender Sync, weather details, on-screen clock, responsive design and a beautiful UI.<br><br>
+											<strong><a href="https://github.com/AnirudhGoel/Calender" target='_blank'>Github</a> |
+											<a href="http://productive-calender.herokuapp.com/cale/" target='_blank'>Demo</a></strong>
+										</div>
+										<div class='panel-footer'>
+											Django, PostgreSQL, Python, Heroku CLI, Google Calender API, HTML5, Vanilla CSS3, jQuery
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='col-sm-4 wow fadeInUp' align="center">
 								<img src="img/projects/pinterest.png" alt='Pinterest Automatic' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -214,7 +234,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInUp' align="center">
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/whatsapp.png" alt='Whatsapp Emoji Suggestion' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -236,7 +256,11 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInRight' align="center">
+						</div>
+					</div>
+					<div class='proj-text'>
+						<div class='row'>
+							<div class='col-sm-4 wow fadeInLeft' align="center">
 								<img src="img/projects/chatbot.png" alt='Chatbot' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -259,11 +283,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class='proj-text'>
-						<div class='row'>
-							<div class='col-sm-4 wow fadeInLeft' align="center">
+							<div class='col-sm-4 wow fadeInUp' align="center">
 								<img src="img/projects/interest.jpg" alt='Interests Ranker' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -285,7 +305,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInUp' align="center">
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/store.png" alt='Online Store APIs' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -306,7 +326,11 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInRight' align="center">
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
+							<div class='col-sm-4 wow fadeInLeft' align="center">
 								<img src="img/projects/dictionary.jpg" alt='Terminal Dictionary' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -327,11 +351,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
-							<div class='col-sm-4 wow fadeInLeft' align="center">
+							<div class='col-sm-4 wow fadeInUp' align="center">
 								<img src="img/projects/cgi.jpg" alt='py on XAMPP' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -352,7 +372,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInUp' align="center">
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -373,7 +393,11 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInRight' align="center">
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
+							<div class='col-sm-4 wow fadeInLeft' align="center">
 								<img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -392,11 +416,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
-							<div class='col-sm-4 wow fadeInLeft' align="center">
+							<div class='col-sm-4 wow fadeInUp' align="center">
 								<img src="img/projects/timestamp.jpg" alt='Timestamp Converter' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -418,7 +438,7 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInUp' align="center">
+							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/social.jpg" alt='My Social Network' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -438,7 +458,11 @@
 									</div>
 								</div>
 							</div>
-							<div class='col-sm-4 wow fadeInRight' align="center">
+						</div>
+					</div>
+					<div class="proj-text">
+						<div class="row">
+							<div class='col-sm-4 wow fadeInLeft' align="center">
 								<img src="img/projects/phottendance.png" alt='Phottendance' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -457,11 +481,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
-							<div class='col-sm-4 wow fadeInLeft' align="center">
+							<div class='col-sm-4 wow fadeInUp' align="center">
 								<img src="img/projects/car-game.jpg" alt='Car Game C++' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -508,21 +528,40 @@
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
 											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="http://www.academistic.com/">Academistic</a></strong></span>
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 2px; display: block;"><strong>Academistic</strong></span>
+												<span style="display: block; padding-bottom: 8px; color: #777777">Link temporarily unavailable</span>
 												<br>
 												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
 												<div class="col-sm-6 intern-time">June '16 - July '16</div>
 											</div>
-											I learned endless things about Linux, Git, PHP, AJAX, MySQL, jQuery and many more technologies here.
-											Some of the tasks I accomplished here are- <br>
+											<br><br>
 											<ul>
-												<li> Implemented <a href="http://www.academistic.com/search_landing.php?locationsearch=&subjectsearch=758&levelsearch=304">Lazy Load</a> on Search Result Page</li>
+												<li> Implemented Lazy Load on Search Result Page</li>
 												<li> Redesigned entire Login System using OTP Verification </li>
 												<li> Integrated a new multi-level Location Based Search system using AJAX</li>
 												<li> Revamped the Institute Profile Page by integrating a new Rating display system, adding effects like animations when element gets visible</li>
 												<li> Added slugs for all the Institute Profile URLs to improve SEO</li>
-												<li> Process of adding courses to categories was made extremely simple for admin using multi select drop down lists</li>
 											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="intern-box wow fadeInLeft">
+								<div class="row">
+									<div class="col-sm-4">
+										<div class='intern-panel-image'>
+											<img src="img/intern/prints.png" alt='Academistic' class='intern-img img-responsive' style="height: 75px; width: 75px; margin-top: 40px;">
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<div class="intern-box-heading" align="center">
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="https://www.instagram.com/Printsvilla/">Printsvilla</a></strong></span>
+												<br>
+												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
+												<div class="col-sm-6 intern-time">Nov '16 - Present</div>
+											</div>
+											Developed the <a href="https://anirudhgoel.github.io/Printsvilla/">Product Order form</a> for this Instagram based startup using Firebase BaaS. The form is implemented with features like Logic Jump, Image storing.
 										</div>
 									</div>
 								</div>
@@ -542,7 +581,7 @@
 												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
 												<div class="col-sm-6 intern-time">June '16 - Present</div>
 											</div>
-											This is the ACM chapter of my college. Here I'm responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum, so do have a look at it to see how we succeeded !
+											This is the ACM chapter of my college. Here I'm responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum, so do have a look at it to see how we succeeded!
 										</div>
 									</div>
 								</div>
@@ -571,9 +610,12 @@
 												</div>
 												<div class="col-sm-6 intern-time">Oct '15 - Present</div>
 											</div>
-											<li>Hosted a Mozilla Awareness session at <strong>Hack@NSIT</strong> Hackathon.</li>
-											<li>My own <a href="https://onefirefoxblog.wordpress.com/">Mozilla Blog</a> to present my experiences.</li>
-											<li>As the <strong>Club Lead</strong>, inspired my fellow classmates to join Mozilla.</li>
+											<br><br>
+											<ul>
+												<li>Hosted a Mozilla Awareness session at <strong>Hack@NSIT</strong> Hackathon.</li>
+												<li>My own <a href="https://onefirefoxblog.wordpress.com/">Mozilla Blog</a> to present my experiences.</li>
+												<li>As the <strong>Club Lead</strong>, inspired my fellow classmates to join Mozilla.</li>
+											</ul>
 										</div>
 									</div>
 								</div>
@@ -593,9 +635,12 @@
 												<div class="col-sm-6 intern-post"><strong>Core Manager</strong></div>
 												<div class="col-sm-6 intern-time">Aug '14 - Dec '14</div>
 											</div>
-											<li>Recruited 5 Associate Members for my team.</li>
-											<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
-											<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+											<br><br>
+											<ul>
+												<li>Recruited 5 Associate Members for my team.</li>
+												<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
+												<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+											</ul>
 										</div>
 									</div>
 								</div>
@@ -617,9 +662,12 @@
 												</div>
 												<div class="col-sm-6 intern-time">Oct '15 - Apr '16</div>
 											</div>
-											<li>Designed Logo of Igniting Young Minds.</li>
-											<li>Collaborated with a team of 4 members to make Posters for LFT.</li>
-											<li>Made posters on <strong>social issues</strong> undertaken by LFT.</li>
+											<br><br>
+											<ul>
+												<li>Designed Logo of Igniting Young Minds.</li>
+												<li>Collaborated with a team of 4 members to make Posters for LFT.</li>
+												<li>Made posters on <strong>social issues</strong> undertaken by LFT.</li>
+											</ul>
 										</div>
 									</div>
 								</div>
@@ -670,159 +718,11 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class='container wow fadeIn'>
-					<div class='row'>
-						<div class='col-sm-5 box-padd' align="center">
-							<a class='box'>
-								HyperText Markup Language (HTML 5)
-							</a>
-						</div>
-						<div class='col-sm-4 box-padd'>
-							<center>
-								<a class='box'>
-									Cascading Style Sheets (CSS 3)
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-3 box-padd'>
-							<center>
-								<a class='box'>
-									JavaScript (JS)
-								</a>
-							</center>
-						</div>
-					</div>
 
-					<div class='row'>
-						<div class='col-sm-4 box-padd'>
-							<center>
-								<a class='box'>
-									Bootstrap : CSS Framework
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-6 box-padd'>
-							<center>
-								<a class='box'>
-									Asynchronous JavaScript and XML (AJAX)
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-2 box-padd'>
-							<center>
-								<a class='box'>
-									PHP
-								</a>
-							</center>
-						</div>
-					</div>
-
-					<div class='row'>
-						<div class='col-sm-3 box-padd'>
-							<center>
-								<a class='box'>
-									MySQL RDBMS
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-5 box-padd'>
-							<center>
-								<a class='box'>
-									JavaScript Object Notation (JSON)
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-2 box-padd'>
-							<center>
-								<a class='box'>
-									Git
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-2 box-padd'>
-							<center>
-								<a class='box'>
-									Wordpress
-								</a>
-							</center>
-						</div>
-					</div>
-
-					<div class='row'>
-						<div class='col-sm-2 box-padd'>
-							<center>
-								<a class='box'>
-									jQuery
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-2 box-padd'>
-							<center>
-								<a class='box'>
-									xHTML
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-2 box-padd'>
-							<center>
-								<a class='box'>
-									Joomla
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-3 box-padd'>
-							<center>
-								<a class='box'>
-									Adobe Photoshop
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-3 box-padd'>
-							<center>
-								<a class='box'>
-									Adobe Illustrator
-								</a>
-							</center>
-						</div>
-					</div>
-
-					<div class='row'>
-						<div class="col-sm-1"></div>
-						<div class='col-sm-1 box-padd'>
-							<center>
-								<a class='box'>
-									C
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-2 box-padd'>
-							<center>
-								<a class='box'>
-									C++
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-2 box-padd'>
-							<center>
-								<a class='box'>
-									Python
-								</a>
-							</center>
-						</div>
-						<div class='col-sm-5 box-padd'>
-							<center>
-								<a class='box'>
-									Application Program Interface (API)
-								</a>
-							</center>
-						</div>
-						<div class="col-sm-1"></div>
-					</div>
-					<br>
-					<br>
-					<br>
-					<br>
-				</div> -->
+				<!-- Django
+				PostgreSQL
+				SQLite3
+				Heroku CLI -->
 			</section>
 
 
@@ -916,6 +816,15 @@
 			changeAnimation();
 			// Call WOW.js
 			new WOW().init();
+		</script>
+		<script>
+			$(window).scroll(function() {
+				if ($(document).scrollTop() > 0) {
+					$('nav').addClass('shrinkNav');
+				} else {
+					$('nav').removeClass('shrinkNav');
+				}
+			});
 		</script>
 		<script>
 			console.log("%cHello ! This is Anirudh Goel.", "color: green");
