sorted technologies known and arranged Internships

--- a/index.html
+++ b/index.html
@@ -550,26 +550,6 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
-											<img src="img/intern/prints.png" alt='Academistic' class='intern-img img-responsive' style="height: 75px; width: 75px; margin-top: 40px;">
-										</div>
-									</div>
-									<div class="col-sm-8" align="left">
-										<div class="intern-panel-body">
-											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="https://www.instagram.com/Printsvilla/">Printsvilla</a></strong></span>
-												<br>
-												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
-												<div class="col-sm-6 intern-time">Nov '16 - Present</div>
-											</div>
-											Developed the <a href="https://anirudhgoel.github.io/Printsvilla/">Product Order form</a> for this Instagram based startup using Firebase BaaS. The form is implemented with features like Logic Jump, Image storing.
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="intern-box wow fadeInLeft">
-								<div class="row">
-									<div class="col-sm-4">
-										<div class='intern-panel-image'>
 											<img src="img/intern/ACM.png" alt='ACM' class='intern-img img-responsive'>
 										</div>
 									</div>
@@ -582,6 +562,26 @@
 												<div class="col-sm-6 intern-time">June '16 - Present</div>
 											</div>
 											This is the ACM chapter of my college. Here I'm responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum, so do have a look at it to see how we succeeded!
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="intern-box wow fadeInLeft">
+								<div class="row">
+									<div class="col-sm-4">
+										<div class='intern-panel-image'>
+											<img src="img/intern/prints.png" alt='Academistic' class='intern-img img-responsive' style="height: 75px; width: 75px; margin-top: 40px;">
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<div class="intern-box-heading" align="center">
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="https://www.instagram.com/Printsvilla/">Printsvilla</a></strong></span>
+												<br>
+												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
+												<div class="col-sm-6 intern-time">Nov '16 - Present</div>
+											</div>
+											Developed the <a href="https://anirudhgoel.github.io/Printsvilla/">Product Order form</a> for this Instagram based startup using Firebase BaaS. The form is implemented with features like Logic Jump, Image storing.
 										</div>
 									</div>
 								</div>
@@ -624,31 +624,6 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
-											<img src="img/intern/AIESEC.png" alt='AIESEC' class='intern-img img-responsive'>
-										</div>
-									</div>
-									<div class="col-sm-8" align="left">
-										<div class="intern-panel-body">
-											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="http://www.aiesec.in/">AIESEC</a></strong></span>
-												<br>
-												<div class="col-sm-6 intern-post"><strong>Core Manager</strong></div>
-												<div class="col-sm-6 intern-time">Aug '14 - Dec '14</div>
-											</div>
-											<br><br>
-											<ul>
-												<li>Recruited 5 Associate Members for my team.</li>
-												<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
-												<li>Raised 7 foreign candidates for coming to India for Internships.</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="intern-box wow fadeInRight">
-								<div class="row">
-									<div class="col-sm-4">
-										<div class='intern-panel-image'>
 											<img src="img/intern/IYM%20Logo.png" alt='IYM' class='intern-img'>
 										</div>
 									</div>
@@ -672,6 +647,31 @@
 									</div>
 								</div>
 							</div>
+							<div class="intern-box wow fadeInRight">
+								<div class="row">
+									<div class="col-sm-4">
+										<div class='intern-panel-image'>
+											<img src="img/intern/AIESEC.png" alt='AIESEC' class='intern-img img-responsive'>
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<div class="intern-box-heading" align="center">
+												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="http://www.aiesec.in/">AIESEC</a></strong></span>
+												<br>
+												<div class="col-sm-6 intern-post"><strong>Core Manager</strong></div>
+												<div class="col-sm-6 intern-time">Aug '14 - Dec '14</div>
+											</div>
+											<br><br>
+											<ul>
+												<li>Recruited 5 Associate Members for my team.</li>
+												<li>Gained valuable public speaking experience by addressing multiple conferences.</li>
+												<li>Raised 7 foreign candidates for coming to India for Internships.</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -689,47 +689,45 @@
 					<div class="row">
 						<div class="col-sm-4">
 							<div class="tech-box1 wow fadeInUp">
-								HyperText Markup Language (HTML 5)<br><br>
-								Cascading Style Sheets (CSS 3)<br><br>
+								Python<br><br>
+								Django : Python Framework<br><br>
+								Flask : Python Micro Framework<br><br>
+								PHP<br><br>
+								Slim : PHP Micro Framework<br><br>
 								JavaScript (JS)<br><br>
-								Slim Micro Framework<br><br>
-								API<br><br>
-								Firebase BaAS<br><br>
-								Wordpress<br><br>
-								Joomla<br><br>
+								Bootstrap : CSS Framework<br><br>
+								jQuery : JS Library<br><br>
+								Git<br><br>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="tech-box2 wow fadeInUp">
-								Bootstrap : CSS Framework<br><br>
+								MySQL RDBMS<br><br>
+								PostgreSQL<br><br>
+								SQLite3<br><br>
+								Firebase BaAS<br><br>
+								Heroku CLI<br><br>
+								APIs<br><br>
 								Asynchronous JavaScript and XML (AJAX)<br><br>
-								PHP<br><br>
-								Chrome Browser Extensions<br><br>
-								Firefox Browser Extensions<br><br>
-								Cookies and Browser Storage<br><br>
-								jQuery<br><br>
-								Python<br><br>
+								JavaScript Object Notation (JSON)<br><br>
+								OAuth Authorization (API)<br><br>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="tech-box3 wow fadeInUp">
-								MySQL RDBMS<br><br>
-								JavaScript Object Notation (JSON)<br><br>
-								OAuth Authorization (API)<br><br>
-								Git<br><br>
+								Cookies and Browser Storage<br><br>
+								Chrome Browser Extensions<br><br>
+								Firefox Browser Extensions<br><br>
 								xHTML<br><br>
+								C/C++<br><br>
 								Adobe Photoshop<br><br>
 								Adobe Illustrator<br><br>
-								C/C++<br><br>
+								Wordpress<br><br>
+								Joomla<br><br>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<!-- Django
-				PostgreSQL
-				SQLite3
-				Heroku CLI -->
 			</section>
 
 
@@ -787,7 +785,7 @@
 							<div class='not-work-box wow fadeInUp'>
 								<div class='not-work-text'>
 									<h3>Pinterest</h3>
-									With a 10k+ pins profile, I prefer spending my scrap time on Pinterest rather than with #<i class='fa fa-twitter'></i> or @<i class='fa fa-facebook'></i>, if you know what I mean.
+									With a 10k+ pins profile, I prefer spending my scrap time on Pinterest rather than with #<i class='fa fa-twitter'></i> or @<i class='fa fa-facebook'></i>.
 								</div>
 							</div>
 						</div>
