Fixed the link of Car Game

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 										</div>
 										<div class='panel-body'>
 											This project is a simple Car Game using C++ graphics.h library which I made by 3 hours continuous coding while learning C Graphics in college.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/Phottendance-Desktop-Web-Portal.git" target='_blank'>Github</a></strong>
+											<strong><a href="https://github.com/AnirudhGoel/Car-Game-C-Plus-Plus" target='_blank'>Github</a></strong>
 										</div>
 										<div class='panel-footer'>
 											C++
