--- a/index.html
+++ b/index.html
@@ -138,14 +138,23 @@
 
 		<div class="main">
 			<section class='page1'>
-				<br><br><br><br><br><br>
-				<center>
-					<img alt='Anirudh Goel' class='dp img-thumbnail img-responsive' src="img/Anirudh.jpg">
-				</center>
+				<div class="row dps">
+					<div class="col-sm-2"></div>
+					<div class="col-sm-3" align="right">
+						<img alt='Anirudh Goel' class='dp1 img-thumbnail img-responsive' src="img/anirudh2.jpeg">
+					</div>
+					<div class="col-sm-2">
+						<img alt='Anirudh Goel' class='dp2 img-thumbnail img-responsive' src="img/anirudh1.jpeg">
+						<br>
+						<img alt='Anirudh Goel' class='dp3 img-thumbnail img-responsive' src="img/anirudh4.jpeg">
+					</div>
+					<div class="col-sm-3">
+						<img alt='Anirudh Goel' class='dp4 img-thumbnail img-responsive' src="img/anirudh3.jpeg">
+					</div>
+					<div class="col-sm-2"></div>
+				</div>				
 				<br>
 				<div class='container-fluid'>
-					<br>
-					<br>
 					<div class='row'>
 						<div class='col-sm-12'>
 							<div class='name'>
