Revert "updated social image"
This reverts commit f60fed607dff79087ef613071dc28a2a9c5123d3.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 		<meta property="og:site_name" content="Anirudh Goel" />
 		<meta property="og:title" content="Anirudh Goel" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="img/social-image.jpg" />
+		<meta property="og:image" content="img/Anirudh.jpg" />
 		<meta property="og:description" content="Hi!
 		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
 		<!-- Google Plus -->
 		<meta itemprop="name" content="Anirudh Goel" />
 		<meta itemprop="description" content="Hi!
 		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
-		<meta itemprop="image" content="img/social-image.jpg" />
+		<meta itemprop="image" content="img/Anirudh.jpg" />
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Anirudh Goel" />
@@ -31,7 +31,7 @@
 		<meta name="twitter:site" content="@AnirudhDelhi" />
 		<meta name="twitter:creator" content="@AnirudhDelhi" />
 		<meta name="twitter:url" content="http://www.anirudhgoel.me" />
-		<meta name="twitter:image" content="img/social-image.jpg" />
+		<meta name="twitter:image" content="img/Anirudh.jpg" />
 		<!-- Pinterest -->
 		<meta name="p:domain_verify" content="5ceeafe5131dabd152c6cdbf8679c17d"/>
 
