updated meta description

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="author" content="Anirudh Goel" />
 		<meta name="designer" content="Anirudh Goel" />
-		<meta name="description" content="Hi!
-		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
+		<meta name="description" content="Anirudh Goel | Summer Student at CERN" />
 		<meta name="keywords" content="anirudhgoel, anirudh goel, anirudhgoel.delhi, anirudhgoeldelhi, anirudh, MAIT, Front End Developer, Backend Developer, Web Designer, Web Developer, Graphic Designer, PHP, Python, MySQL, HTML, CSS, Bootstrap, C, C++, API, Photoshop, Illustrator, whythispage, Interpersonal Interaction, Human Nature, Blog">
 		<meta name="robots" content="index, follow" />
 		<!-- Facebook -->
@@ -16,18 +15,15 @@
 		<meta property="og:title" content="Anirudh Goel" />
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="img/social-image.jpg" />
-		<meta property="og:description" content="Hi!
-		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
+		<meta property="og:description" content="Anirudh Goel | Summer Student at CERN" />
 		<!-- Google Plus -->
 		<meta itemprop="name" content="Anirudh Goel" />
-		<meta itemprop="description" content="Hi!
-		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
+		<meta itemprop="description" content="Anirudh Goel | Summer Student at CERN" />
 		<meta itemprop="image" content="img/social-image.jpg" />
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Anirudh Goel" />
-		<meta name="twitter:description" content="Hi!
-		I'm a student, pursuing my Bachelors of Technology (B.Tech.) in Information Technology (I.T.) from Maharaja Agrasen Institute of Technology, New Delhi." />
+		<meta name="twitter:description" content="Anirudh Goel | Summer Student at CERN" />
 		<meta name="twitter:site" content="@AnirudhDelhi" />
 		<meta name="twitter:creator" content="@AnirudhDelhi" />
 		<meta name="twitter:url" content="http://www.anirudhgoel.me" />
